<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>  
  <groupId>com.its4u.buildfactory</groupId>
  <artifactId>openshift-deployment-generator-ms</artifactId>
  <name>openshift-deployment-generator-ms</name>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
   		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
    	<joinfaces.version>4.4.2</joinfaces.version>
          <sonar.coverage.exclusions>
            src/main/java/**/ViewInitializerBean.java,
            src/main/java/**/*.java       
        </sonar.coverage.exclusions>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.joinfaces</groupId>
        <artifactId>joinfaces-dependencies</artifactId>
        <version>${joinfaces.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  
    <dependencies>

    	<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-web</artifactId>
		</dependency>
         <dependency>
      		<groupId>org.joinfaces</groupId>
      		<artifactId>primefaces-spring-boot-starter</artifactId>
    	</dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.6.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
        </dependency>
        <dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.11</version>
		</dependency>		
    </dependencies>
    
    <build>
        <plugins>
        	<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
			    <configuration>
			        <release>11</release>
			    </configuration>
      		</plugin>
            <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>2.22.0</version>
			    <configuration>
			        <argLine>
			            --illegal-access=permit
			        </argLine>
			    </configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-failsafe-plugin</artifactId>
			    <version>2.22.0</version>
			    <configuration>
			        <argLine>
			            --illegal-access=permit
			        </argLine>
			    </configuration>
			</plugin> 
	
        </plugins>
    </build>
</project>